# i18ner

./: .gitignore  README.md  data.json  dict_file.csv  en.json  pyproject.toml
src/: __main__.py  csv_handler.py  json_handler.py
