[project]
name = "i18ner"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Silali", email = "gibsonsilali@gmail.com" }
]
dependencies = [
    "typer>=0.12.3",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/i18ner"]
